--- a/src/popup/layout/css/bodyId.css
+++ b/src/popup/layout/css/bodyId.css
@@ -6,11 +6,15 @@
 
 #body > div {
   opacity: 0;
-  position: relative;
+  position: absolute;
+  padding: 1rem;
+  box-sizing: border-box;
+  width: 90%;
 }
 #body > div > div {
-  position: absolute;
+  /* position: absolute; */
   top: 0;
+  box-sizing: border-box;
   width: 100%;
 }
 
