--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -4,7 +4,7 @@
 @import url('./css/subtext.css');
 
 :root {
-  color: rgba(255, 255, 255, 0.87);
+  /* color: rgba(255, 255, 255, 0.87); */
   font-family: "Roboto Slab";
 }
 
